# dl_plugin

./: .bazelrc  .gitignore  .gitmodules  .tf_plugin_configure.bazelrc  CMakeLists.txt  README.md  WORKSPACE  build.sh  configure.py  test.py
cmake/: config.cmake
cmake/Modules/: CUDA.cmake
cmake/utils/: FindCUDA.cmake  Utils.cmake
stream_executor/: CMakeLists.txt  stream_executor_dlgpu.cc  stream_executor_dlgpu.h
stream_executor/cuda/: cuda_activation.h  cuda_asm_compiler.cc  cuda_diagnostics.cc  cuda_diagnostics.h  cuda_dnn.cc  cuda_dnn.h  cuda_driver.cc  cuda_driver.h  cuda_driver_test.cc  cuda_event.cc  cuda_event.h  cuda_gpu_executor.cc  cuda_gpu_executor.h  cuda_helpers.h  cuda_kernel.cc  cuda_kernel.h  cuda_platform.cc  cuda_platform.h  cuda_platform_id.cc  cuda_stream.h  cuda_stub.cc  cuda_timer.h  cudart_stub.cc  cudnn_version.cc  cudnn_version.h  cudnn_version_test.cc
stream_executor/gpu/: asm_compiler.cc  asm_compiler.h  gpu_activation.cc  gpu_driver.h  gpu_event.cc  gpu_event.h  gpu_executor.h  gpu_helpers.h  gpu_kernel.h  gpu_rng.h  gpu_stream.cc  gpu_stream.h  gpu_timer.cc  gpu_timer.h  gpu_types.h  redzone_allocator.cc
tensorflow_plugin/: BUILD  workspace.bzl
tensorflow_plugin/src/: BUILD  pluggable_device.cc
tensorflow_plugin/src/graph/: plugin_optimizer.cc  plugin_optimizer.h
tensorflow_plugin/src/stream_executor/: BUILD  stream_executor_dlgpu.cc  stream_executor_dlgpu.h
tensorflow_plugin/src/stream_executor/cuda/: BUILD  cuda_asm_compiler.cc  cuda_diagnostics.cc  cuda_diagnostics.h  cuda_dnn.h  cuda_driver.cc  cuda_driver.h  cuda_event.cc  cuda_event.h  cuda_gpu_executor.cc  cuda_gpu_executor.h  cuda_kernel.cc  cuda_kernel.h  cuda_platform.cc  cuda_platform.h  cuda_platform_id.cc  cuda_stream.h  cuda_stub.cc  cuda_timer.h  cudart_stub.cc  cudnn_stub.cc  redzone_allocator_test.cc
tensorflow_plugin/src/stream_executor/gpu/: BUILD  asm_compiler.cc  asm_compiler.h  gpu_activation.cc  gpu_activation.h  gpu_diagnostics.h  gpu_driver.h  gpu_event.cc  gpu_event.h  gpu_executor.h  gpu_kernel.h  gpu_stream.cc  gpu_stream.h  gpu_timer.cc  gpu_timer.h  redzone_allocator.h
